src/llvm/wrapper/core.nim


# ##  Functions in this group correspond to APIs on llvm::ConstantExpr.
# ##
# ##  @see llvm::ConstantExpr.
# proc getConstOpcode*(constantVal: ValueRef): Opcode {.cdecl, importc: "LLVMGetConstOpcode", dynlib: LLVMlib.}
# proc alignOf*(ty: TypeRef): ValueRef {.cdecl, importc: "LLVMAlignOf", dynlib: LLVMlib.}
# proc sizeOfX*(ty: TypeRef): ValueRef {.cdecl, importc: "LLVMSizeOf", dynlib: LLVMlib.}
# proc constNeg*(constantVal: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNeg", dynlib: LLVMlib.}
# proc constNSWNeg*(constantVal: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNSWNeg", dynlib: LLVMlib.}
# proc constNUWNeg*(constantVal: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNUWNeg", dynlib: LLVMlib.}
# proc constFNeg*(constantVal: ValueRef): ValueRef {.cdecl, importc: "LLVMConstFNeg", dynlib: LLVMlib.}
# proc constNot*(constantVal: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNot", dynlib: LLVMlib.}
# proc constAdd*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstAdd", dynlib: LLVMlib.}
# proc constNSWAdd*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNSWAdd", dynlib: LLVMlib.}
# proc constNUWAdd*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNUWAdd", dynlib: LLVMlib.}
# proc constFAdd*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstFAdd", dynlib: LLVMlib.}
# proc constSub*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstSub", dynlib: LLVMlib.}
# proc constNSWSub*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNSWSub", dynlib: LLVMlib.}
# proc constNUWSub*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNUWSub", dynlib: LLVMlib.}
# proc constFSub*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstFSub", dynlib: LLVMlib.}
# proc constMul*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstMul", dynlib: LLVMlib.}
# proc constNSWMul*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNSWMul", dynlib: LLVMlib.}
# proc constNUWMul*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstNUWMul", dynlib: LLVMlib.}
# proc constFMul*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstFMul", dynlib: LLVMlib.}
# proc constUDiv*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstUDiv", dynlib: LLVMlib.}
# proc constExactUDiv*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstExactUDiv", dynlib: LLVMlib.}
# proc constSDiv*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstSDiv", dynlib: LLVMlib.}
# proc constExactSDiv*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstExactSDiv", dynlib: LLVMlib.}
# proc constFDiv*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstFDiv", dynlib: LLVMlib.}
# proc constURem*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstURem", dynlib: LLVMlib.}
# proc constSRem*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstSRem", dynlib: LLVMlib.}
# proc constFRem*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstFRem", dynlib: LLVMlib.}
# proc constAnd*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstAnd", dynlib: LLVMlib.}
# proc constOr*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstOr", dynlib: LLVMlib.}
# proc constXor*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstXor", dynlib: LLVMlib.}
# proc constICmp*(predicate: IntPredicate; lHSConstant: ValueRef;rHSConstant: ValueRef): ValueRef {. cdecl, importc: "LLVMConstICmp", dynlib: LLVMlib.}
# proc constFCmp*(predicate: RealPredicate; lHSConstant: ValueRef;rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstFCmp", dynlib: LLVMlib.}
# proc constShl*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstShl", dynlib: LLVMlib.}
# proc constLShr*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstLShr", dynlib: LLVMlib.}
# proc constAShr*(lHSConstant: ValueRef; rHSConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstAShr", dynlib: LLVMlib.}
# proc constGEP*(constantVal: ValueRef; constantIndices: ptr ValueRef;numIndices: cuint): ValueRef {. cdecl, importc: "LLVMConstGEP", dynlib: LLVMlib.}
proc constGep*(constantVal: Value, constantIndices: openArray[Value]): Value =
    var
        s = constantIndices.map(proc(a: Value): ValueRef = a.value)
        adr = if s.len > 0: s[0].addr else: nil
        l = cuint s.len
    newValue[Value](constGEP(constantVal.value, adr, l))
# proc constGEP2*(ty: TypeRef; constantVal: ValueRef; constantIndices: ptr ValueRef;numIndices: cuint): ValueRef {.cdecl, importc: "LLVMConstGEP2", dynlib: LLVMlib.}
# proc constInBoundsGEP*(constantVal: ValueRef; constantIndices: ptr ValueRef;numIndices: cuint): ValueRef {.cdecl, importc: "LLVMConstInBoundsGEP", dynlib: LLVMlib.}
# proc constInBoundsGEP2*(ty: TypeRef; constantVal: ValueRef;constantIndices: ptr ValueRef;numIndices: cuint): ValueRef {. cdecl, importc: "LLVMConstInBoundsGEP2", dynlib: LLVMlib.}
# proc constTrunc*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstTrunc", dynlib: LLVMlib.}
# proc constSExt*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstSExt", dynlib: LLVMlib.}
# proc constZExt*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstZExt", dynlib: LLVMlib.}
# proc constFPTrunc*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstFPTrunc", dynlib: LLVMlib.}
# proc constFPExt*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstFPExt", dynlib: LLVMlib.}
# proc constUIToFP*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstUIToFP", dynlib: LLVMlib.}
# proc constSIToFP*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstSIToFP", dynlib: LLVMlib.}
# proc constFPToUI*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstFPToUI", dynlib: LLVMlib.}
# proc constFPToSI*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstFPToSI", dynlib: LLVMlib.}
# proc constPtrToInt*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstPtrToInt", dynlib: LLVMlib.}
# proc constIntToPtr*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstIntToPtr", dynlib: LLVMlib.}
# proc constBitCast*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstBitCast", dynlib: LLVMlib.}
# proc constAddrSpaceCast*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstAddrSpaceCast", dynlib: LLVMlib.}
# proc constZExtOrBitCast*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstZExtOrBitCast", dynlib: LLVMlib.}
# proc constSExtOrBitCast*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstSExtOrBitCast", dynlib: LLVMlib.}
# proc constTruncOrBitCast*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstTruncOrBitCast", dynlib: LLVMlib.}
# proc constPointerCast*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstPointerCast", dynlib: LLVMlib.}
# proc constIntCast*(constantVal: ValueRef; toType: TypeRef;isSigned: Bool): ValueRef {. cdecl, importc: "LLVMConstIntCast", dynlib: LLVMlib.}
# proc constFPCast*(constantVal: ValueRef; toType: TypeRef): ValueRef {.cdecl, importc: "LLVMConstFPCast", dynlib: LLVMlib.}
# proc constSelect*(constantCondition: ValueRef; constantIfTrue: ValueRef;constantIfFalse: ValueRef): ValueRef {.cdecl, importc: "LLVMConstSelect", dynlib: LLVMlib.}
# proc constExtractElement*(vectorConstant: ValueRef;indexConstant: ValueRef): ValueRef {. cdecl, importc: "LLVMConstExtractElement", dynlib: LLVMlib.}
# proc constInsertElement*(vectorConstant: ValueRef; elementValueConstant: ValueRef;indexConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstInsertElement", dynlib: LLVMlib.}
# proc constShuffleVector*(vectorAConstant: ValueRef; vectorBConstant: ValueRef;maskConstant: ValueRef): ValueRef {.cdecl, importc: "LLVMConstShuffleVector", dynlib: LLVMlib.}
# proc constExtractValue*(aggConstant: ValueRef; idxList: ptr cuint;numIdx: cuint): ValueRef {. cdecl, importc: "LLVMConstExtractValue", dynlib: LLVMlib.}
# proc constInsertValue*(aggConstant: ValueRef; elementValueConstant: ValueRef;idxList: ptr cuint; numIdx: cuint): ValueRef {.cdecl, importc: "LLVMConstInsertValue", dynlib: LLVMlib.}
# proc blockAddress*(f: ValueRef; bb: BasicBlockRef): ValueRef {.cdecl, importc: "LLVMBlockAddress", dynlib: LLVMlib.}

# proc constInlineAsm*(ty: TypeRef; asmString: cstring; constraints: cstring;hasSideEffects: Bool; isAlignStack: Bool): ValueRef {.cdecl, importc: "LLVMConstInlineAsm", dynlib: LLVMlib.}
#     ## * Deprecated: Use LLVMGetInlineAsm instead.


# ##  This group contains functions that operate on global values. Functions in
# ##  this group relate to functions in the llvm::GlobalValue class tree.
# ##
# ##  @see llvm::GlobalValue
# proc getGlobalParent*(global: ValueRef): ModuleRef {.cdecl, importc: "LLVMGetGlobalParent", dynlib: LLVMlib.}
# proc isDeclaration*(global: ValueRef): Bool {.cdecl, importc: "LLVMIsDeclaration", dynlib: LLVMlib.}
# proc getLinkage*(global: ValueRef): Linkage {.cdecl, importc: "LLVMGetLinkage", dynlib: LLVMlib.}
# proc setLinkage*(global: ValueRef; linkage: Linkage) {.cdecl, importc: "LLVMSetLinkage", dynlib: LLVMlib.}
# proc getSection*(global: ValueRef): cstring {.cdecl, importc: "LLVMGetSection", dynlib: LLVMlib.}
# proc setSection*(global: ValueRef; section: cstring) {.cdecl, importc: "LLVMSetSection", dynlib: LLVMlib.}
# proc getVisibility*(global: ValueRef): Visibility {.cdecl, importc: "LLVMGetVisibility", dynlib: LLVMlib.}
# proc setVisibility*(global: ValueRef; viz: Visibility) {.cdecl, importc: "LLVMSetVisibility", dynlib: LLVMlib.}
# proc getDLLStorageClass*(global: ValueRef): DLLStorageClass {.cdecl, importc: "LLVMGetDLLStorageClass", dynlib: LLVMlib.}
# proc setDLLStorageClass*(global: ValueRef; class: DLLStorageClass) {.cdecl, importc: "LLVMSetDLLStorageClass", dynlib: LLVMlib.}
# proc getUnnamedAddress*(global: ValueRef): UnnamedAddr {.cdecl, importc: "LLVMGetUnnamedAddress", dynlib: LLVMlib.}
# proc setUnnamedAddress*(global: ValueRef; unnamedAddr: UnnamedAddr) {.cdecl, importc: "LLVMSetUnnamedAddress", dynlib: LLVMlib.}

# proc globalGetValueType*(global: ValueRef): TypeRef {.cdecl, importc: "LLVMGlobalGetValueType", dynlib: LLVMlib.}
#     ##  Returns the "value type" of a global value.  This differs from the formal
#     ##  type of a global value which is always a pointer type.
#     ##
#     ##  @see llvm::GlobalValue::getValueType()

# proc hasUnnamedAddr*(global: ValueRef): Bool {.cdecl, importc: "LLVMHasUnnamedAddr", dynlib: LLVMlib.}
#     ## * Deprecated: Use LLVMGetUnnamedAddress instead.

# proc setUnnamedAddr*(global: ValueRef; hasUnnamedAddr: Bool) {.cdecl, importc: "LLVMSetUnnamedAddr", dynlib: LLVMlib.}
#     ## * Deprecated: Use LLVMSetUnnamedAddress instead.

